--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -7,7 +7,7 @@
 <title>Hamish Williams | Storybook</title>
 <meta
   name="description"
-  content="My custom design component system created from the ground up used in building my portfolio"
+  content="My design component system created from the ground up used in building my portfolio"
 />
 
 <meta name="theme-color" content="#111111" />
